--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,3 +8,4 @@
   // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
   "unwantedRecommendations": []
 }
+"unwantedRecommendations"
